--- a/app/frontend/packs/application.css
+++ b/app/frontend/packs/application.css
@@ -4,3 +4,9 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import 'trix/dist/trix';
+@import 'flatpickr/dist/flatpickr';
+
+trix-editor.form-control {
+  min-height: 300px;
+  height: auto;
+}
