--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,10 +3,12 @@
 <% end %>
 
 <% content_for :subtitle do %>
-  <div class="flex items-center text-sm text-gray-400">
-    <%= heroicon('calendar', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
-    Lid sinds <%= @user.lid_since.strftime("%d-%m-%Y") %>
-  </div>
+  <% if @user.lid? %>
+    <div class="flex items-center text-sm text-gray-400">
+      <%= heroicon('calendar', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
+      Lid sinds <%= @user.lid_since.strftime("%d-%m-%Y") %>
+    </div>
+  <% end %>
 
   <div class="flex items-center text-sm text-gray-400">
     <%= heroicon('users', class_name: "flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400") %>
@@ -21,10 +23,12 @@
 <% end %>
 
 <div class="divide-y divide-gray-200 -my-6 md:grid md:grid-cols-12 md:divide-y-0 md:divide-x">
-  <aside class="md:col-span-4 md:pr-6">
-    <%= gravatar_for @user, size: 96, class: "h-32 w-32 rounded-full m-4" %>
+  <aside class="md:col-span-3 md:pr-6">
+    <div class="flex justify-center">
+      <%= gravatar_for @user, size: 500, class: "h-32 w-32 rounded-full m-8" %>
+    </div>
 
-    <div class="mt-4 -mx-6 text-gray-900">
+    <div class="-mx-6 text-gray-900">
       <div class="p-2 sm:p-4 border-t border-gray-200">
         <h4>Groepen</h4>
         <ul class="list-disc list-inside">
@@ -45,16 +49,16 @@
         </div>
       <% end %>
 
-      <div class="p-2 sm:p-4 border-t border-gray-200">
-        <% unless @missed_drinks.empty? %>
+      <% if @user.lid? %>
+        <div class="p-2 sm:p-4 border-t border-gray-200">
           <h4>Gemiste Zondagborrels</h4>
           <ul class="list-disc list-inside">
             <% @missed_drinks.each do |md| %>
               <li><%= link_to md.date.strftime("%d-%m-%Y"), md %><br></li>
             <% end %>
           </ul>
-        <% end %>
-      </div>
+        </div>
+      <% end %>
 
       <dl class="border-t border-gray-200 sm:divide-y sm:divide-gray-200">
         <% specs = {
@@ -81,7 +85,7 @@
     </div>
   </aside>
 
-  <div class="md:col-span-8 md:pl-6">
+  <div class="md:col-span-9 md:pl-6">
     <div class="overflow-hidden border-b sm:rounded-t-md">
       <ul role="list" class="divide-y divide-gray-200">
         <%= render @user.quotes %>
