--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,12 +30,24 @@
 
     <div class="-mx-6 text-gray-900">
       <div class="p-2 sm:p-4 border-t border-gray-200">
-        <h4>Groepen</h4>
-        <ul class="list-disc list-inside">
+        <div class="flex justify-around">
           <% @user.usergroups.each do |group| %>
-            <li><%= link_to group.name, group %><br></li>
+            <div class="h-12 w-12 mr-4 text-sm font-medium text-gray-900 popover"
+                 data-controller="popover"
+                 data-action="mouseover->popover#mouseOver mouseout->popover#mouseOut"
+                 data-popover-translate-x="0"
+                 data-popover-translate-y="15%">
+              <% if group.logo.attached? %>
+                <%= image_tag group.logo.representation(resize_to_limit: [100, 100]), class: "rounded-full", alt: group.name %>
+              <% else %>
+                <img class="rounded-full" src="https://placehold.co/500x500?text=<%= group.name %>" alt="<%= group.name %>">
+              <% end %>
+              <div class="content hidden absolute bg-gray-100 border border-gray-200 text-gray-700 rounded p-3" data-popover-target="content">
+                <%= group.name %>
+              </div>
+            </div>
           <% end %>
-        </ul>
+        </div>
       </div>
 
       <% if current_user.admin? %>
@@ -49,12 +61,12 @@
         </div>
       <% end %>
 
-      <% if @user.lid? %>
+      <% if @user.lid? && !@missed_drinks&.empty? %>
         <div class="p-2 sm:p-4 border-t border-gray-200">
           <h4>Gemiste Zondagborrels</h4>
           <ul class="list-disc list-inside">
             <% @missed_drinks.each do |md| %>
-              <li><%= link_to md.date.strftime("%d-%m-%Y"), md %><br></li>
+              <li><%= link_to md.date.strftime("%d-%m-%Y"), md %></li>
             <% end %>
           </ul>
         </div>
