--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,7 @@
 
     <div class="-mx-6 text-gray-900">
       <div class="p-2 sm:p-4 border-t border-gray-200">
-        <div class="flex justify-around">
+        <div class="flex flex-wrap content-center justify-evenly">
           <% @user.usergroups.each do |group| %>
             <div class="h-12 w-12 mr-4 text-sm font-medium text-gray-900 popover"
                  data-controller="popover"
