--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,7 +15,7 @@
   Profiel: { description: "Mijn account", path: current_user, icon: 'user-circle' },
   Instellingen: { description: "Mijn account aanpassen", path: edit_user_path(current_user), icon: 'pencil' },
   Autorisaties: { description: "Mijn OAuth autorisaties", path: oauth_authorized_applications_path, icon: 'lock-closed' },
-  Uitloggen: { description: "Uitloggen van de website", path: destroy_user_session_path, icon: 'logout' },
+  Uitloggen: { description: "Uitloggen van de website", path: destroy_user_session_path, icon: 'logout', method: :delete },
 } %>
 
 <% external_links = {
@@ -69,7 +69,7 @@
                       </div>
 
                       <div class="justify-center px-5 py-5 bg-gray-50 space-y-6 sm:flex sm:space-y-0 sm:space-x-10 sm:px-8">
-                        <% external_links.each do |name, options| %>
+                        <% external_links.each do |_, options| %>
                           <div class="flow-root">
                             <%= link_to options[:url], target: :blank, class: "-m-3 p-1 flex items-center rounded-md text-base font-medium text-gray-500 hover:bg-gray-100 transition ease-in-out duration-150" do %>
                               <span class="m-1"><i class="fa-fw <%= options[:icon] %>"></i></span>
@@ -105,7 +105,7 @@
                 <div class="overflow-hidden">
                   <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 lg:grid-cols-2">
                     <% user_items.each do |name, options| %>
-                      <%= link_to options[:path], class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
+                      <%= link_to options[:path], class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50", method: options[:method] || :get do %>
                         <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                           <%= heroicon(options[:icon], style: :outline, class_name: "h-6 w-6") %>
                         </div>
@@ -175,7 +175,7 @@
               <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 overflow-hidden">
                 <div class="relative grid gap-6 bg-white px-5 py-6 sm:gap-8 sm:p-8 grid-cols-2">
                   <% user_items.each do |name, options| %>
-                    <%= link_to options[:path], class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50" do %>
+                    <%= link_to options[:path], class: "-m-3 p-3 flex items-start rounded-lg hover:bg-gray-50", method: options[:method] || :get do %>
                       <div class="flex-shrink-0 flex items-center justify-center h-10 w-10 rounded-md bg-hamers-red-500 text-white sm:h-12 sm:w-12">
                         <%= heroicon(options[:icon], style: :outline, class_name: "h-6 w-6") %>
                       </div>
