--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -94,6 +94,21 @@
           </div>
         <% end %>
       </dl>
+
+      <% if @user.alid? && current_user.in_group?("Trajectcoördinatoren") %>
+        <div class="p-2 sm:p-4 border-t border-gray-200">
+          <h4>Rereviewde bieren</h4>
+          <ul class="list-disc list-inside">
+            <% @user.reviews.each do |r| %>
+              <li>
+                <%= link_to r.beer do %>
+                  <%= r.beer.name %> <span class="text-gray-500">(<%= r.beer.kind %>)</span>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
     </div>
   </aside>
 
