--- a/app/views/blogitems/show.html.erb
+++ b/app/views/blogitems/show.html.erb
@@ -55,6 +55,15 @@
               <% end %>
             </div>
           </div>
+          <div class="mt-2">
+            <% @item.tags.each do |tag| %>
+              <%= link_to blog_by_tag_path(tag.name) do %>
+                <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-sm font-medium bg-gray-100 text-gray-800">
+                  <%= tag.name %>
+                </span>
+              <% end %>
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
