--- a/app/views/blogitems/_form.html.erb
+++ b/app/views/blogitems/_form.html.erb
@@ -23,6 +23,12 @@
           <label class="font-medium text-gray-700">Ook voor plebs te lezen</label>
         </div>
       </div>
+      <div class="mt-1 flex rounded-md shadow-sm">
+        <span class="inline-flex items-center px-3 rounded-l-md border border-r-0 border-gray-300 bg-gray-50 text-gray-500 sm:text-sm">
+          Tags
+        </span>
+        <%= f.text_field :tags_as_string, class: "flex-1 min-w-0 block w-full px-3 py-2 rounded-none rounded-r-md focus:ring-hamers-red-500 focus:border-hamers-red-500 sm:text-sm border-gray-300" %>
+      </div>
     </div>
 
     <div class="flex justify-center mt-5">
