--- a/app/views/blogitems/index.html.erb
+++ b/app/views/blogitems/index.html.erb
@@ -13,6 +13,15 @@
       <p class="text-xl font-semibold text-gray-900">
         <%= item.title %>
       </p>
+      <p>
+        <% item.tags.each do |tag| %>
+          <%= link_to blog_by_tag_path(tag.name) do %>
+            <span class="inline-flex items-center px-2.5 py-0.5 rounded-md text-xs font-medium bg-gray-100 text-gray-800">
+              <%= tag.name %>
+            </span>
+          <% end %>
+        <% end %>
+      </p>
       <p class="mt-3 text-base text-gray-500">
         <%= truncate(strip_tags(item.body.to_s), length: 150) %>
       </p>
