Changes homepage look

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,5 @@
 <% if @pagy.page == 1 %>
-  <div class="max-w-6xl mx-auto px-2 mt-8">
-    <div class="mt-2 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3">
+    <div class="grid grid-cols-1 gap-5 md:grid-cols-2 lg:grid-cols-3">
       <%= render 'shared/user_info' %>
       <%= render 'shared/next_event' %>
       <%= render 'shared/quote_form' %>
@@ -8,10 +7,9 @@
       <%= render 'shared/blog' %>
       <%= render 'shared/random_biertje' %>
     </div>
-  </div>
 <% end %>
 
-<div class="relative md:my-4 -mx-5 sm:-mx-6">
+<div class="relative my-4 -mx-5 sm:-mx-6">
   <div class="absolute inset-0 flex items-center" aria-hidden="true">
     <div class="w-full border-t border-gray-300"></div>
   </div>
