--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -1,7 +1,6 @@
-<div class="bg-white overflow-hidden md:shadow md:rounded-lg">
-  <div class="md:p-5">
-    <h2 class="text-indigo-400 text-xl font-extrabold my-2 md:mx-5">Quote</h2>
-    <div class="flex items-center">
+<div class="bg-white overflow-hidden md:shadow md:rounded-lg md:p-4">
+    <h2 class="text-hamers-red-500 text-xl font-bold">Quote</h2>
+    <div class="flex items-center mt-2">
       <%= form_for @quote, html: { class: "w-full" } do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
         <div>
@@ -16,10 +15,9 @@
           <% users_array = User.all.reverse.map { |user| [user.name, user.id] } %>
           <%= f.select :user_id, options_for_select(users_array), {}, class: 'form-control selectpicker mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm' %>
         </div>
-        <div class="px-4 py-3 text-right sm:px-6 sm:w-full">
-          <%= f.submit 'Citeer', class: 'inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500' %>
+        <div class="text-right mt-4 sm:w-full">
+          <%= f.submit 'Citeer', class: 'text-center py-2 px-4 border border-transparent shadow-sm text-sm font-bold rounded-md text-white bg-hamers-red-500 hover:bg-hamers-red-600 focus:outline-none focus:ring-2 focus:ring-hamers-red-500' %>
         </div>
       <% end %>
     </div>
-  </div>
 </div>
