--- a/app/views/shared/_next_event.html.erb
+++ b/app/views/shared/_next_event.html.erb
@@ -1,44 +1,36 @@
 <div class="overflow-hidden md:shadow md:rounded-lg md:p-4">
-  <div class="">
-    <% if @next_event %>
-      <h1 class="text-hamers-red-500 text-xl font-bold">Volgende activiteit</h1>
-      <h2 class="font-extrabold tracking-tight text-gray-900 text-2xl text-justify">
-        <%= link_to @next_event.title, @next_event %>
-      </h2>
-      <h3 class="text-gray-600">In <%= time_ago_in_words(@next_event.date) %></h3>
-      <div class="mt-8 flex">
-        <div class="inline-flex rounded-md shadow w-full">
-          <%= form_for @next_event.signups.build(event_id: @next_event.id, user_id: current_user.id, status: 1), html: { class: "w-full" } do |f| %>
-            <%= f.hidden_field :event_id %>
-            <%= f.hidden_field :status %>
-            <%= f.submit 'Aanwezig', class: 'w-full text-center font-bold p-4 border border-transparent text-base font-medium rounded-md text-white bg-hamers-red-500 hover:bg-hamers-red-600' %>
-          <% end %>
-        </div>
+  <h1 class="text-hamers-red-500 text-xl font-bold">Volgende activiteit</h1>
+  <% if @next_event %>
+    <h2 class="font-extrabold tracking-tight text-gray-900 text-2xl text-justify">
+      <%= link_to @next_event.title, @next_event %>
+    </h2>
+    <h3 class="text-gray-600">In <%= time_ago_in_words(@next_event.date) %></h3>
+    <div class="mt-8 flex">
+      <div class="inline-flex rounded-md shadow w-full">
+        <%= form_for @next_event.signups.build(event_id: @next_event.id, user_id: current_user.id, status: 1), html: { class: "w-full" } do |f| %>
+          <%= f.hidden_field :event_id %>
+          <%= f.hidden_field :status %>
+          <%= f.submit 'Aanwezig', class: 'w-full text-center font-bold p-4 border border-transparent text-base font-medium rounded-md text-white bg-hamers-red-500 hover:bg-hamers-red-600' %>
+        <% end %>
       </div>
-    <% else %>
-      <div class="text-center">
-        <svg class="mx-auto h-12 w-12 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+    </div>
+  <% else %>
+    <h3 class="mt-2 text-sm font-medium text-gray-900">Geen aankomende activiteiten :(</h3>
+    <p class="mt-1 text-sm text-gray-500">
+      Waarom maak je er niet een aan?
+    </p>
+    <div class="mt-6">
+      <%= button_to new_event_path, method: :get,
+                    class: "inline-flex items-center px-4 py-2 text-sm font-bold rounded-md text-white bg-hamers-red-500 hover:bg-hamers-red-600" do %>
+        <!-- Heroicon name: solid/plus -->
+        <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
              aria-hidden="true">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
+          <path fill-rule="evenodd"
+                d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
+                clip-rule="evenodd"/>
         </svg>
-        <h3 class="mt-2 text-sm font-medium text-gray-900">Geen aankomende activiteiten :(</h3>
-        <p class="mt-1 text-sm text-gray-500">
-          Waarom maak je er niet een aan?
-        </p>
-        <div class="mt-6">
-          <%= button_to new_event_path, method: :get,
-                        class: "inline-flex items-center px-4 py-2 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500" do %>
-            <!-- Heroicon name: solid/plus -->
-            <svg class="-ml-1 mr-2 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
-                 aria-hidden="true">
-              <path fill-rule="evenodd"
-                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
-                    clip-rule="evenodd"/>
-            </svg>
-            Nieuwe activiteit
-          <% end %>
-        </div>
-      </div>
-    <% end %>
-  </div>
+        Nieuwe activiteit
+      <% end %>
+    </div>
+  <% end %>
 </div>
