Fix public pages

--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,7 +8,7 @@
   Vergaderingen: { description: "Lees hier de notulen", path: meetings_path, icon: 'chat-alt-2' },
   Log: { description: "Logs van de website", path: trail_path, icon: 'book-open' },
   Blog: { description: "Wat hebben we gedaan?", path: blogitems_path, icon: 'pencil-alt' },
-  Nieuws: { description: "Is er nog een nieuwtje?", path: news_index_path, icon: 'rss' },
+  Paginas: { description: "Voor op de website", path: public_pages_path, icon: 'rss' },
 } %>
 
 <% user_items = {
