--- a/app/views/blogitems/_form.html.erb
+++ b/app/views/blogitems/_form.html.erb
@@ -2,7 +2,7 @@
   <%= form_for(@item) do |f| %>
     <% if @item.errors.any? %>
         <div id="error_explanation">
-          <h2><%= pluralize(@meeting.errors.count, 'error') %> prohibited this blogitem from being saved:</h2>
+          <h2><%= pluralize(@item.errors.count, 'error') %> prohibited this blogitem from being saved:</h2>
 
           <ul>
             <% @item.errors.full_messages.each do |msg| %>
