--- a/app/views/public_pages/index.html.erb
+++ b/app/views/public_pages/index.html.erb
@@ -2,6 +2,12 @@
     Openbare pagina's
 <% end %>
 
+<% content_for :options do %>
+  <div class="flex flex-row-reverse">
+    <%= link_to 'Voeg pagina toe', new_public_page_path, class: "px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-hamers-red-500" %>
+  </div>
+<% end %>
+
   <div class="flex flex-col mt-6">
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
       <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
